@@ -36,7 +36,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 /**
  * 회원 가입에 관련된 기능을 담당하는 서비스 클래스
@@ -196,7 +195,7 @@ public class SignUpService {
         List<String> texts = responseForm.getImages().get(0).getFields()
                 .stream()
                 .map(ImageField::getInferText)
-                .collect(Collectors.toList());
+                .toList();
 
         ClientOcrResponseForm.ClientOcrResponseFormBuilder responseFormBuilder = ClientOcrResponseForm.builder();
         texts.forEach(
@@ -216,7 +215,11 @@ public class SignUpService {
     }
 
     private void validateDupl(SignUpForm form) throws NoSuchStudentException {
-        studentRepository.findById(form.getStudNo()).orElseThrow(NoSuchStudentException::new);
+        Student findById = studentRepository.findById(form.getStudNo()).orElseGet(Student::new);
+        Student findByEmail = studentRepository.findStudentByEmail(form.getEmail()).orElseGet(Student::new);
+        if (findById.getStudNo() == null && findByEmail.getEmail() == null) {
+            throw new NoSuchStudentException();
+        }
     }
 
     private Optional<Student> saveAsEntity(SignUpForm form) {
@@ -239,5 +242,9 @@ public class SignUpService {
             e.printStackTrace();
             return Optional.empty();
         }
+    }
+
+    public void validateDepartment(String department) {
+
     }
 }
